--- a/WebApplication7/appsettings.json
+++ b/WebApplication7/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=WIN-OLRQJ0R85GJ;Database=FirstDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=WIN-OLRQJ0R85GJ;Database=FirstDb;Trusted_Connection=True; TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
